[metadata]
name = mistune
version = attr: mistune.__version__
author = Hsiaoming Yang
author_email = me@lepture.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/lepture/mistune
description = A sane Markdown parser with useful plugins and renderers
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing :: Markup

[options]
zip_safe = False
packages =
    mistune
    mistune.plugins
    mistune.directives

[bdist_wheel]
universal = 1

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    raise DeprecationWarning
