[metadata]
name = mistune
version = attr: mistune.__version__
author = Hsiaoming Yang
author_email = me@lepture.com
license = BSD 3-Clause License
license_files = LICENSE
url = https://mistune.lepture.com/
description = A sane Markdown parser with useful plugins and renderers
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing :: Markup

project_urls =
    Documentation = https://mistune.lepture.com/
    Source Code = https://github.com/lepture/mistune
    Bug Tracker = https://github.com/lepture/mistune/issues
    Donate = https://github.com/sponsors/lepture
    Blog = https://blog.authlib.org/

[options]
zip_safe = False
packages =
    mistune
    mistune.plugins
    mistune.renderers
    mistune.directives

[bdist_wheel]
universal = 1

[coverage:report]
omit =
    mistune/__main__.py
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    raise DeprecationWarning
